--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "yarn prisma generate && next dev",
     "build": "next build",
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
