--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint": "8.54.0",
+    "eslint-config-next": "14.0.3",
+    "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.32",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@types/jest": "^29.5.5",
+    "@types/cheerio": "^0.22.35",
+    "@types/jest": "^29.5.10",
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "prisma": "^5.3.1"
+    "prisma": "^5.6.0",
+    "typescript": "5.3.2"
   }
 }
